initialisation du projet

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<body>
 			<header>
 				<img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo"/>
-				<div>
+				<div class="town_position">
 					<span class="search-marker"><i class="fas fa-map-marker-alt"></i></span>
 					<form method="post" action="#" id="barre-recherche">
 						<input type="search" name="ville" value="Paris, Belleville " placeholder="ville rechercher">
