travail visuel header, barre de recherche, logo site, colo fond

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			<nav>
 				<h2><strong>Fonctionnement</strong></h2>
 				<ul>
-					<li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-					<li><i class="fas fa-bars"></i>Composez votre menu</li>
-					<li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+					<li><span>1</span><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+					<li><span>2</span><i class="fas fa-bars"></i>Composez votre menu</li>
+					<li class="shop"><span>3</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
 				</ul>
 			</nav>
 			<section class="restaurants">
