--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<h2><strong>Restaurants</strong></h2>
 				<div class="cards">
 					<img src="Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat proposés" />
+					<span>Nouveau</span>
 					<a href="#">
 						<p>
 							<strong>La palette du goût</strong><br />
@@ -47,6 +48,7 @@
 				</div>
 				<div class="cards">
 					<img src="Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat proposés" />
+					<span>Nouveau</span>
 					<a href="#">
 						<p>
 							<strong>La note enchantée</strong><br />
