retouche colo background footer et outil de recherche

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<h2><strong>Fonctionnement</strong></h2>
 				<ul>
 					<li><span>1</span><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-					<li><span>2</span><i class="fas fa-bars"></i>Composez votre menu</li>
+					<li><span>2</span><i class="fas fa-list-ul"></i>Composez votre menu</li>
 					<li class="shop"><span>3</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
 				</ul>
 			</nav>
