travail visu mise en page

--- a/Menu/menu_à_la_française.html
+++ b/Menu/menu_à_la_française.html
@@ -6,32 +6,100 @@
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 			<title>Ohmyfood/Menu à la Française</title>
 		</head>
 		<body>
 			<header>
 				<a href="">
-					<img src="" alt="" />
+					<i class="fas fa-arrow-left"></i><img src="../Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
-				<img src="" alt="" /><!--parti dédier image carte en fond-->
+				<div class="background">
+				<img src="../Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				</div>
 			</header>
 			<section class="carte">
-				<h1><strong>À la Française<i class="far fa-heart"></i></strong></h1>
+				<h1><strong>À la Française</strong><i class="far fa-heart"></i></h1>
 				<article id="entrées">
 					<h2>ENTREES</h2>
-					<div>
+					<div class="etiquette">
 						<p>
-
+							<strong>Tartare de poulpe acidulé</strong><br />
+							Aux zests d'orange
 						</p>
-						<span class="prix"></span>
+						<span class="prix">25€</span>
+						<span class="check"><i class="fas fa-check-circle"></i></span>
+					</div>
+					<div class="etiquette">
+						<p>
+							<strong>Velouté de légumes d'antan</strong><br />
+							Carotte, panais, topinambour
+						</p>
+						<span class="prix">35€</span>
+						<span class="check"><i class="fas fa-check-circle"></i></span>
+					</div>
+					<div class="etiquette">
+						<p>
+							<strong>Soupe à l'oignon</strong><br />
+							Revisitée
+						</p>
+						<span class="prix">20€</span>
 						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 				</article>
 				<article id="plats">
 					<h2>PLATS</h2>
+					<div class="etiquette">
+						<p>
+							<strong>Coquilles Saint-Jacques</strong><br />
+							Accompagnées d'une purée de panais
+						</p>
+						<span class="prix">40€</span>
+						<span class="check"><i class="fas fa-check-circle"></i></span>
+					</div>
+					<div class="etiquette">
+						<p>
+							<strong>Magret de canard</strong><br />
+							Et parmentier de pommes de terres
+						</p>
+						<span class="prix">35€</span>
+						<span class="check"><i class="fas fa-check-circle"></i></span>
+					</div>
+					<div class="etiquette">
+						<p>
+							<strong>Pigeonneau d'Ille-et-Vilaine</strong><br />
+							Sur son lit de gnocchis aux légumes
+						</p>
+						<span class="prix">44€</span>
+						<span class="check"><i class="fas fa-check-circle"></i></span>
+					</div>
 				</article>
 				<article id="desserts">
 					<h2>DESSERTS</h2>
+					<div class="etiquette">
+						<p>
+							<strong>Pétales de violettes glacés</strong><br />
+							Et purée de noisettes
+						</p>
+						<span class="prix">18€</span>
+						<span class="check"><i class="fas fa-check-circle"></i></span>
+					</div>
+					<div class="etiquette">
+						<p>
+							<strong>Fondant au chocolat</strong><br />
+							Revisité
+						</p>
+						<span class="prix">22€</span>
+						<span class="check"><i class="fas fa-check-circle"></i></span>
+					</div>
+					<div class="etiquette">
+						<p>
+							<strong>Millefeuille croustillant</strong><br />
+							Myrtilles et pâte d'amande
+						</p>
+						<span class="prix">23€</span>
+						<span class="check"><i class="fas fa-check-circle"></i></span>
+					</div>
 				</article>
 				<button type="button" class="button">
 					<span class="button__text">Commander</span>
