travail visu mise en page et création des liens page à page

--- a/acceuil.html
+++ b/acceuil.html
@@ -61,7 +61,7 @@
 				</div>
 				<div class="cards">
 					<img src="Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat proposés" />
-					<a href="#">
+					<a href="Menu/menu_à_la_française.html">
 						<p>
 							<strong>À la française</strong><br />
 							Cité Rouge
