--- a/Menu/menu_à_la_française.html
+++ b/Menu/menu_à_la_française.html
@@ -11,7 +11,7 @@
 		</head>
 		<body>
 			<header>
-				<a href="">
+				<a href="../acceuil.html">
 					<i class="fas fa-arrow-left"></i><img src="../Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
@@ -25,26 +25,23 @@
 					<div class="etiquette">
 						<p>
 							<strong>Tartare de poulpe acidulé</strong><br />
-							Aux zests d'orange
+							<span class="accompagnement">Aux zests d'orange</span>
+							<span class="prix">25€</span>
 						</p>
-						<span class="prix">25€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
 							<strong>Velouté de légumes d'antan</strong><br />
-							Carotte, panais, topinambour
+							<span class="accompagnement">Carotte, panais, topinambour</span>
+							<span class="prix">35€</span>
 						</p>
-						<span class="prix">35€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
-					</div>
+						</div>
 					<div class="etiquette">
 						<p>
 							<strong>Soupe à l'oignon</strong><br />
-							Revisitée
+							<span class="accompagnement">Revisitée</span>
+							<span class="prix">20€</span>
 						</p>
-						<span class="prix">20€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 				</article>
 				<article id="plats">
@@ -52,26 +49,23 @@
 					<div class="etiquette">
 						<p>
 							<strong>Coquilles Saint-Jacques</strong><br />
-							Accompagnées d'une purée de panais
+							<span class="accompagnement">Accompagnées d'une purée de panais</span>
+							<span class="prix">40€</span>
 						</p>
-						<span class="prix">40€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
 							<strong>Magret de canard</strong><br />
-							Et parmentier de pommes de terres
+							<span class="accompagnement">Et parmentier de pommes de terres</span>
+							<span class="prix">35€</span>
 						</p>
-						<span class="prix">35€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
 							<strong>Pigeonneau d'Ille-et-Vilaine</strong><br />
-							Sur son lit de gnocchis aux légumes
+							<span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
+							<span class="prix">44€</span>
 						</p>
-						<span class="prix">44€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 				</article>
 				<article id="desserts">
@@ -79,26 +73,23 @@
 					<div class="etiquette">
 						<p>
 							<strong>Pétales de violettes glacés</strong><br />
-							Et purée de noisettes
+							<span class="accompagnement">Et purée de noisettes</span>
+							<span class="prix">18€</span>
 						</p>
-						<span class="prix">18€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
 							<strong>Fondant au chocolat</strong><br />
-							Revisité
+							<span class="accompagnement">Revisité</span>
+							<span class="prix">22€</span>
 						</p>
-						<span class="prix">22€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
 							<strong>Millefeuille croustillant</strong><br />
-							Myrtilles et pâte d'amande
+							<span class="accompagnement">Myrtilles et pâte d'amande</span>
+							<span class="prix">23€</span>
 						</p>
-						<span class="prix">23€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 				</article>
 				<button type="button" class="button">
