création et liaison des pages secondaire, ajustement des etiquette des la carte

--- a/Menu/menu_la_note_enchantée.html
+++ b/Menu/menu_la_note_enchantée.html
@@ -7,7 +7,7 @@
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-			<title>Ohmyfood/Menu à la Française</title>
+			<title>Ohmyfood/Menu la note enchantée</title>
 		</head>
 		<body>
 			<header>
@@ -15,56 +15,63 @@
 					<i class="fas fa-arrow-left"></i><img src="../Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
-				<img src="../Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				<img src="../Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
 				</div>
 			</header>
 			<section class="carte">
-				<h1><strong>À la Française</strong><i class="far fa-heart"></i></h1>
+				<h1><strong>La note enchantée</strong><i class="far fa-heart"></i></h1>
 				<article id="entrées">
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Tartare de poulpe acidulé</strong><br />
-							<span class="accompagnement">Aux zests d'orange</span>
+							<strong>Ravioles de foie gras</strong><br />
+							<span class="accompagnement">Accompagnés de leur crème à la truffe</span>
 						</p>
 						<span class="prix">25€</span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Velouté de légumes d'antan</strong><br />
-							<span class="accompagnement">Carotte, panais, topinambour</span>
+							<strong>Caviar osciètre</strong><br />
+							<span class="accompagnement">Sur blini à la farine de blé noir</span>
 						</p>
 						<span class="prix">35€</span>
 						</div>
 					<div class="etiquette">
 						<p>
-							<strong>Soupe à l'oignon</strong><br />
-							<span class="accompagnement">Revisitée</span>
+							<strong>Homard et espuma de...</strong><br />
+							<span class="accompagnement">Mariné aux zests d'orange</span>
 						</p>
 						<span class="prix">20€</span>
+					</div>
+					<div class="etiquette">
+						<p>
+							<strong>Foie gras de canard cuit entier</strong><br />
+							<span class="accompagnement">Confiture de figue et pain toasté</span>
+						</p>
+						<span class="prix">35€</span>
 					</div>
 				</article>
 				<article id="plats">
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Coquilles Saint-Jacques</strong><br />
-							<span class="accompagnement">Accompagnées d'une purée de panais</span>
+							<strong>Noix de Coquilles Saint-Jacques</strong><br />
+							<span class="accompagnement">Sur lit de purée céleri-rave</span>
 						</p>
 						<span class="prix">40€</span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Magret de canard</strong><br />
-							<span class="accompagnement">Et parmentier de pommes de terres</span>
+							<strong>Langoustine poêlée</strong><br />
+							<span class="accompagnement">Purée de patate douce</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Pigeonneau d'Ille-et-Vilaine</strong><br />
-							<span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
+							<strong>Mijoté de queue de boeuf</strong><br />
+							<span class="accompagnement">Et riz sauvage aux zests de citron</span>
 						</p>
 						<span class="prix">44€</span>
 					</div>
@@ -73,22 +80,22 @@
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Pétales de violettes glacés</strong><br />
-							<span class="accompagnement">Et purée de noisettes</span>
+							<strong>Macaron noisette et chocolat</strong><br />
+							<span class="accompagnement">Glace au caramel brun et sel de Guérande</span>
 						</p>
 						<span class="prix">18€</span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Fondant au chocolat</strong><br />
-							<span class="accompagnement">Revisité</span>
+							<strong>Baba au rhum revisité</strong><br />
+							<span class="accompagnement">Avec son coulis de citron</span>
 						</p>
 						<span class="prix">22€</span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Millefeuille croustillant</strong><br />
-							<span class="accompagnement">Myrtilles et pâte d'amande</span>
+							<strong>Tarte au citron meringuée</strong><br />
+							<span class="accompagnement">Destructurée</span>
 						</p>
 						<span class="prix">23€</span>
 					</div>
