--- a/Menu/menu_le_délice_des_sens.html
+++ b/Menu/menu_le_délice_des_sens.html
@@ -7,7 +7,7 @@
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-			<title>Ohmyfood/Menu à la Française</title>
+			<title>Ohmyfood/Menu le délice des sens</title>
 		</head>
 		<body>
 			<header>
@@ -15,7 +15,7 @@
 					<i class="fas fa-arrow-left"></i><img src="../Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
-				<img src="../Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				<img src="../Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
 				</div>
 			</header>
 			<section class="carte">
@@ -24,22 +24,22 @@
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Tartare de poulpe acidulé</strong><br />
-							<span class="accompagnement">Aux zests d'orange</span>
+							<strong>Tartare de thon</strong><br />
+							<span class="accompagnement">Assaisonné au yuzu</span>
 						</p>
 						<span class="prix">25€</span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Velouté de légumes d'antan</strong><br />
-							<span class="accompagnement">Carotte, panais, topinambour</span>
+							<strong>Bouchée de homard croustillant</strong><br />
+							<span class="accompagnement">Et sa farandole de petits légumes</span>
 						</p>
 						<span class="prix">35€</span>
 						</div>
 					<div class="etiquette">
 						<p>
-							<strong>Soupe à l'oignon</strong><br />
-							<span class="accompagnement">Revisitée</span>
+							<strong>Velouté de cèpes</strong><br />
+							<span class="accompagnement">Aux truffes</span>
 						</p>
 						<span class="prix">20€</span>
 					</div>
@@ -48,23 +48,23 @@
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Coquilles Saint-Jacques</strong><br />
-							<span class="accompagnement">Accompagnées d'une purée de panais</span>
+							<strong>Poulet rôti aux herbes de provence</strong><br />
+							<span class="accompagnement">Et sa crème de truffe</span>
 						</p>
 						<span class="prix">40€</span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Magret de canard</strong><br />
-							<span class="accompagnement">Et parmentier de pommes de terres</span>
+							<strong>Langouste rôtie</strong><br />
+							<span class="accompagnement">Et ses légumes de saison</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Pigeonneau d'Ille-et-Vilaine</strong><br />
-							<span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
+							<strong>Côte de boeuf angus</strong><br />
+							<span class="accompagnement">Et sa purée de panais</span>
 						</p>
 						<span class="prix">44€</span>
 					</div>
@@ -73,22 +73,22 @@
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Pétales de violettes glacés</strong><br />
-							<span class="accompagnement">Et purée de noisettes</span>
+							<strong>Farandole de desserts</strong><br />
+							<span class="accompagnement">Du chef</span>
 						</p>
 						<span class="prix">18€</span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Fondant au chocolat</strong><br />
-							<span class="accompagnement">Revisité</span>
+							<strong>Crème brulée</strong><br />
+							<span class="accompagnement">Revisitée</span>
 						</p>
 						<span class="prix">22€</span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Millefeuille croustillant</strong><br />
-							<span class="accompagnement">Myrtilles et pâte d'amande</span>
+							<strong>Tiramisu</strong><br />
+							<span class="accompagnement">A la noisette</span>
 						</p>
 						<span class="prix">23€</span>
 					</div>
