--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<div class="cards">
 					<img src="Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat proposés" />
 					<span>Nouveau</span>
-					<a href="#">
+					<a href="Menu/menu_la_palette_du_goût.html">
 						<p>
 							<strong>La palette du goût</strong><br />
 							Ménilmontant
@@ -51,7 +51,7 @@
 				<div class="cards">
 					<img src="Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat proposés" />
 					<span>Nouveau</span>
-					<a href="#">
+					<a href="Menu/menu_la_note_enchantée.html">
 						<p>
 							<strong>La note enchantée</strong><br />
 							Charonne
@@ -71,7 +71,7 @@
 				</div>
 				<div class="cards">
 					<img src="Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat proposés" />
-					<a href="#">
+					<a href="Menu/menu_le_délice_des_sens.html">
 						<p>
 							<strong>Le délice des sens</strong><br />
 							Folie-Méricourt
