intégration icône check à la carte des menu

--- a/Menu/menu_à_la_française.html
+++ b/Menu/menu_à_la_française.html
@@ -28,6 +28,7 @@
 							<span class="accompagnement">Aux zests d'orange</span>
 						</p>
 						<span class="prix">25€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -35,6 +36,7 @@
 							<span class="accompagnement">Carotte, panais, topinambour</span>
 						</p>
 						<span class="prix">35€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 						</div>
 					<div class="etiquette">
 						<p>
@@ -42,6 +44,7 @@
 							<span class="accompagnement">Revisitée</span>
 						</p>
 						<span class="prix">20€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<article id="plats">
@@ -52,6 +55,7 @@
 							<span class="accompagnement">Accompagnées d'une purée de panais</span>
 						</p>
 						<span class="prix">40€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -59,7 +63,7 @@
 							<span class="accompagnement">Et parmentier de pommes de terres</span>
 						</p>
 						<span class="prix">35€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -67,6 +71,7 @@
 							<span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
 						</p>
 						<span class="prix">44€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<article id="desserts">
@@ -77,6 +82,7 @@
 							<span class="accompagnement">Et purée de noisettes</span>
 						</p>
 						<span class="prix">18€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -84,6 +90,7 @@
 							<span class="accompagnement">Revisité</span>
 						</p>
 						<span class="prix">22€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -91,6 +98,7 @@
 							<span class="accompagnement">Myrtilles et pâte d'amande</span>
 						</p>
 						<span class="prix">23€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<button type="button" class="button">
