--- a/Menu/menu_la_note_enchantée.html
+++ b/Menu/menu_la_note_enchantée.html
@@ -28,6 +28,7 @@
 							<span class="accompagnement">Accompagnés de leur crème à la truffe</span>
 						</p>
 						<span class="prix">25€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -35,6 +36,7 @@
 							<span class="accompagnement">Sur blini à la farine de blé noir</span>
 						</p>
 						<span class="prix">35€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 						</div>
 					<div class="etiquette">
 						<p>
@@ -42,6 +44,7 @@
 							<span class="accompagnement">Mariné aux zests d'orange</span>
 						</p>
 						<span class="prix">20€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -49,6 +52,7 @@
 							<span class="accompagnement">Confiture de figue et pain toasté</span>
 						</p>
 						<span class="prix">35€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<article id="plats">
@@ -59,6 +63,7 @@
 							<span class="accompagnement">Sur lit de purée céleri-rave</span>
 						</p>
 						<span class="prix">40€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -66,7 +71,7 @@
 							<span class="accompagnement">Purée de patate douce</span>
 						</p>
 						<span class="prix">35€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -74,6 +79,7 @@
 							<span class="accompagnement">Et riz sauvage aux zests de citron</span>
 						</p>
 						<span class="prix">44€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<article id="desserts">
@@ -84,6 +90,7 @@
 							<span class="accompagnement">Glace au caramel brun et sel de Guérande</span>
 						</p>
 						<span class="prix">18€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -91,6 +98,7 @@
 							<span class="accompagnement">Avec son coulis de citron</span>
 						</p>
 						<span class="prix">22€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -98,6 +106,7 @@
 							<span class="accompagnement">Destructurée</span>
 						</p>
 						<span class="prix">23€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<button type="button" class="button">
