--- a/Menu/menu_le_délice_des_sens.html
+++ b/Menu/menu_le_délice_des_sens.html
@@ -28,6 +28,7 @@
 							<span class="accompagnement">Assaisonné au yuzu</span>
 						</p>
 						<span class="prix">25€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -35,6 +36,7 @@
 							<span class="accompagnement">Et sa farandole de petits légumes</span>
 						</p>
 						<span class="prix">35€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 						</div>
 					<div class="etiquette">
 						<p>
@@ -42,6 +44,7 @@
 							<span class="accompagnement">Aux truffes</span>
 						</p>
 						<span class="prix">20€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<article id="plats">
@@ -52,6 +55,7 @@
 							<span class="accompagnement">Et sa crème de truffe</span>
 						</p>
 						<span class="prix">40€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -59,7 +63,7 @@
 							<span class="accompagnement">Et ses légumes de saison</span>
 						</p>
 						<span class="prix">35€</span>
-						<span class="check"><i class="fas fa-check-circle"></i></span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -67,6 +71,7 @@
 							<span class="accompagnement">Et sa purée de panais</span>
 						</p>
 						<span class="prix">44€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<article id="desserts">
@@ -77,6 +82,7 @@
 							<span class="accompagnement">Du chef</span>
 						</p>
 						<span class="prix">18€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -84,6 +90,7 @@
 							<span class="accompagnement">Revisitée</span>
 						</p>
 						<span class="prix">22€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
@@ -91,6 +98,7 @@
 							<span class="accompagnement">A la noisette</span>
 						</p>
 						<span class="prix">23€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
 				<button type="button" class="button">
