--- a/Menu/menu_à_la_française.html
+++ b/Menu/menu_à_la_française.html
@@ -2,7 +2,8 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
-			<link rel="stylesheet" type="text/css" href="style_menu.css">
+			<link rel="stylesheet" type="text/css" href="../style.css/style.css">
+			<link rel="stylesheet" type="text/css" href="../style.css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -111,10 +112,10 @@
 				</div>
 				<div class="info">
 					<ul>
-						<li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
-						<li><i class="fas fa-hands-helping"></i>Devenir partenairer</li>
-						<li>Mentions légales</li>
-						<li>Contact</li>
+						<li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+						<li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenairer</a></li>
+						<li><a href="#">Mentions légales</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
 			</footer>
