--- a/menu/menu_a_la_française.html
+++ b/menu/menu_a_la_française.html
@@ -2,21 +2,21 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="../style.css/style.css">
+			<link rel="stylesheet" type="text/css" href="../css/style.css">
 			<link rel="stylesheet" type="text/css" href="../style.css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-			<title>Ohmyfood/Menu le délice des sens</title>
+			<title>Ohmyfood/Menu à la Française</title>
 		</head>
 		<body>
 			<header>
 				<a href="../index.html">
-					<i class="fas fa-arrow-left"></i><img src="../Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
+					<i class="fas fa-arrow-left"></i><img src="../maquettes_ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
-				<img src="../Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				<img src="../maquettes_ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
 				</div>
 			</header>
 			<section class="carte">
@@ -25,24 +25,24 @@
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Tartare de thon</strong><br />
-							<span class="accompagnement">Assaisonné au yuzu</span>
+							<strong>Tartare de poulpe acidulé</strong><br />
+							<span class="accompagnement">Aux zests d'orange</span>
 						</p>
 						<span class="prix">25€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Bouchée de homard croustillant</strong><br />
-							<span class="accompagnement">Et sa farandole de petits légumes</span>
+							<strong>Velouté de légumes d'antan</strong><br />
+							<span class="accompagnement">Carotte, panais, topinambour</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 						</div>
 					<div class="etiquette">
 						<p>
-							<strong>Velouté de cèpes</strong><br />
-							<span class="accompagnement">Aux truffes</span>
+							<strong>Soupe à l'oignon</strong><br />
+							<span class="accompagnement">Revisitée</span>
 						</p>
 						<span class="prix">20€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -52,24 +52,24 @@
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Poulet rôti aux herbes de provence</strong><br />
-							<span class="accompagnement">Et sa crème de truffe</span>
+							<strong>Coquilles Saint-Jacques</strong><br />
+							<span class="accompagnement">Accompagnées d'une purée de panais</span>
 						</p>
 						<span class="prix">40€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Langouste rôtie</strong><br />
-							<span class="accompagnement">Et ses légumes de saison</span>
+							<strong>Magret de canard</strong><br />
+							<span class="accompagnement">Et parmentier de pommes de terres</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Côte de boeuf angus</strong><br />
-							<span class="accompagnement">Et sa purée de panais</span>
+							<strong>Pigeonneau d'Ille-et-Vilaine</strong><br />
+							<span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
 						</p>
 						<span class="prix">44€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -79,24 +79,24 @@
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Farandole de desserts</strong><br />
-							<span class="accompagnement">Du chef</span>
+							<strong>Pétales de violettes glacés</strong><br />
+							<span class="accompagnement">Et purée de noisettes</span>
 						</p>
 						<span class="prix">18€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Crème brulée</strong><br />
-							<span class="accompagnement">Revisitée</span>
+							<strong>Fondant au chocolat</strong><br />
+							<span class="accompagnement">Revisité</span>
 						</p>
 						<span class="prix">22€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Tiramisu</strong><br />
-							<span class="accompagnement">A la noisette</span>
+							<strong>Millefeuille croustillant</strong><br />
+							<span class="accompagnement">Myrtilles et pâte d'amande</span>
 						</p>
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -108,7 +108,7 @@
 			</section>
 			<footer>
 				<div class="logo_de_fin">
-				<img src="../Maquettes Ohmyfood/images/logo/ohmyfood.png" alt=" logo du site"/>
+				<img src="../maquettes_ohmyfood/images/logo/ohmyfood.png" alt=" logo du site"/>
 				</div>
 				<div class="info">
 					<ul>
