--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
-			<link rel="stylesheet" type="text/css" href="style.css/style.css">
+			<link rel="stylesheet" type="text/css" href="../css/style.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
 		</head>
 		<body>
 			<header>
-				<div class="logo"><img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo"/></div>
+				<div class="logo"><img src="maquettes_ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo"/></div>
 				<div class="town_position">
 					<span class="search-marker"><i class="fas fa-map-marker-alt"></i></span>
 					<form method="post" action="#" id="barre-recherche">
@@ -35,11 +35,11 @@
 					<li class="shop"><span>3</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
 				</ul>
 			</nav>
-			<section class="restaurants">
+			<section class="restaurants">+
 				<h2><strong>Restaurants</strong></h2>
 				<div class="cards">
-					<a href="menu/menu_la_palette_du_goût.html">
-						<img src="Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat proposés" />
+					<a href="menu/menu_la_palette_du_gout.html">
+						<img src="maquettes_ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat proposés" />
 						<span>Nouveau</span>
 						<p>
 							<strong>La palette du goût</strong><br />
@@ -52,8 +52,8 @@
 					</a>
 				</div>
 				<div class="cards">
-					<a href="menu/menu_la_note_enchantée.html">
-						<img src="Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat proposés" />
+					<a href="menu/menu_la_note_enchantee.html">
+						<img src="maquettes_ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat proposés" />
 						<span>Nouveau</span>
 						<p>
 							<strong>La note enchantée</strong><br />
@@ -63,8 +63,8 @@
 					</a>
 				</div>
 				<div class="cards">
-					<a href="menu/menu_à_la_française.html">
-						<img src="Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat proposés" />
+					<a href="menu/menu_a_la_française.html">
+						<img src="maquettes_ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat proposés" />
 						<p>
 							<strong>À la française</strong><br />
 							Cité Rouge
@@ -73,8 +73,8 @@
 					</a>
 				</div>
 				<div class="cards">
-					<a href="menu/menu_le_délice_des_sens.html">
-					<img src="Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat proposés" />
+					<a href="menu/menu_le_delice_des_sens.html">
+					<img src="maquettes_ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat proposés" />
 						<p>
 							<strong>Le délice des sens</strong><br />
 							Folie-Méricourt
@@ -85,7 +85,7 @@
 			</section>
 			<footer>
 				<div class="logo_de_fin">
-				<img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt=" logo du site"/>
+				<img src="maquettes_ohmyfood/images/logo/ohmyfood.png" alt=" logo du site"/>
 				</div>
 				<div class="info">
 					<ul>
