--- a/menu/menu_la_note_enchantee.html
+++ b/menu/menu_la_note_enchantee.html
@@ -2,7 +2,7 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
-			<link rel="stylesheet" type="text/css" href="../style.css/style.css">
+			<link rel="stylesheet" type="text/css" href="../css/style.css">
 			<link rel="stylesheet" type="text/css" href="../style.css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,10 +13,10 @@
 		<body>
 			<header>
 				<a href="../index.html">
-					<i class="fas fa-arrow-left"></i><img src="../Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
+					<i class="fas fa-arrow-left"></i><img src="../maquettes_ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
-				<img src="../Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				<img src="../maquettes_ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
 				</div>
 			</header>
 			<section class="carte">
@@ -116,7 +116,7 @@
 			</section>
 			<footer>
 				<div class="logo_de_fin">
-				<img src="../Maquettes Ohmyfood/images/logo/ohmyfood.png" alt=" logo du site"/>
+				<img src="../maquettes_ohmyfood/images/logo/ohmyfood.png" alt=" logo du site"/>
 				</div>
 				<div class="info">
 					<ul>
