modification, integration fichier css dans un meme fichier

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -3,12 +3,12 @@
 		<head>
 			<meta charset="utf-8">
 			<link rel="stylesheet" type="text/css" href="../css/style.css">
-			<link rel="stylesheet" type="text/css" href="../style.css/style_menu.css">
+			<link rel="stylesheet" type="text/css" href="../css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-			<title>Ohmyfood/Menu à la Française</title>
+			<title>Ohmyfood/Menu la palette du goût</title>
 		</head>
 		<body>
 			<header>
@@ -16,33 +16,33 @@
 					<i class="fas fa-arrow-left"></i><img src="../maquettes_ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
-				<img src="../maquettes_ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				<img src="../maquettes_ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
 				</div>
 			</header>
 			<section class="carte">
-				<h1><strong>À la Française</strong><i class="far fa-heart"></i></h1>
+				<h1><strong>La palette du goût</strong><i class="far fa-heart"></i></h1>
 				<article id="entrées">
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Tartare de poulpe acidulé</strong><br />
-							<span class="accompagnement">Aux zests d'orange</span>
+							<strong>Fricassée d'escargot</strong><br />
+							<span class="accompagnement">Au pimét d'espelette</span>
 						</p>
 						<span class="prix">25€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Velouté de légumes d'antan</strong><br />
-							<span class="accompagnement">Carotte, panais, topinambour</span>
+							<strong>Foie gras de canard ni-cuit</strong><br />
+							<span class="accompagnement">Et ses copeaux de truffe noire</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 						</div>
 					<div class="etiquette">
 						<p>
-							<strong>Soupe à l'oignon</strong><br />
-							<span class="accompagnement">Revisitée</span>
+							<strong>Oeuf au plat</strong><br />
+							<span class="accompagnement">Assaisonné à la truffe sur lit de....</span>
 						</p>
 						<span class="prix">20€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -52,24 +52,24 @@
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Coquilles Saint-Jacques</strong><br />
-							<span class="accompagnement">Accompagnées d'une purée de panais</span>
+							<strong>Filet de boeuf aux herbes</strong><br />
+							<span class="accompagnement">Accompagnées de sa ribambelle de légu...</span>
 						</p>
 						<span class="prix">40€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Magret de canard</strong><br />
-							<span class="accompagnement">Et parmentier de pommes de terres</span>
+							<strong>Parmentier de queue de boeuf</strong><br />
+							<span class="accompagnement">A la truffe noire sur sa purée de panais</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Pigeonneau d'Ille-et-Vilaine</strong><br />
-							<span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
+							<strong>filet de Turbot</strong><br />
+							<span class="accompagnement">Aux agrumes</span>
 						</p>
 						<span class="prix">44€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -79,24 +79,24 @@
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Pétales de violettes glacés</strong><br />
-							<span class="accompagnement">Et purée de noisettes</span>
+							<strong>Paris-Brest</strong><br />
+							<span class="accompagnement">Revisité</span>
 						</p>
 						<span class="prix">18€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Fondant au chocolat</strong><br />
-							<span class="accompagnement">Revisité</span>
+							<strong>Macaron au chocolat d'exception</strong><br />
+							<span class="accompagnement">Et glace à la vanille de Madagascar</span>
 						</p>
 						<span class="prix">22€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Millefeuille croustillant</strong><br />
-							<span class="accompagnement">Myrtilles et pâte d'amande</span>
+							<strong>Mousse au chocolat</strong><br />
+							<span class="accompagnement">Au piment d'espelette et à la truffe noire</span>
 						</p>
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
