--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
-			<link rel="stylesheet" type="text/css" href="../css/style.css">
+			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -35,51 +35,68 @@
 					<li class="shop"><span>3</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
 				</ul>
 			</nav>
-			<section class="restaurants">+
+			<section class="restaurants">
 				<h2><strong>Restaurants</strong></h2>
 				<div class="cards">
-					<a href="menu/menu_la_palette_du_gout.html">
+					<a href="menu/la_palette_du_gout.html">
 						<img src="maquettes_ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat proposés" />
 						<span>Nouveau</span>
+						<div class="contenant">
 						<p>
 							<strong>La palette du goût</strong><br />
 							Ménilmontant
 						</p>
-						<button type="button" class="heart-button">
+						<button type="button" class="heart-button" onclick="return false;">
 							<i class="far fa-heart"></i>
 							<i class="fas fa-heart"></i>
 						</button>
+					</div>
 					</a>
 				</div>
 				<div class="cards">
-					<a href="menu/menu_la_note_enchantee.html">
+					<a href="menu/la_note_enchantee.html">
 						<img src="maquettes_ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat proposés" />
 						<span>Nouveau</span>
+						<div class="contenant">
 						<p>
 							<strong>La note enchantée</strong><br />
 							Charonne
 						</p>
+						<button type="button" class="heart-button" onclick="return false;">
 						<i class="far fa-heart"></i>
+						<i class="fas fa-heart"></i>
+					</button>
+					</div>
 					</a>
 				</div>
 				<div class="cards">
-					<a href="menu/menu_a_la_française.html">
+					<a href="menu/a_la_francaise.html">
 						<img src="maquettes_ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat proposés" />
+						<div class="contenant">
 						<p>
 							<strong>À la française</strong><br />
 							Cité Rouge
 						</p>
+						<button type="button" class="heart-button" onclick="return false;">
 						<i class="far fa-heart"></i>
+						<i class="fas fa-heart"></i>
+					</button>
+					</div>
 					</a>
 				</div>
 				<div class="cards">
-					<a href="menu/menu_le_delice_des_sens.html">
+					<a href="menu/le_delice_des_sens.html">
 					<img src="maquettes_ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat proposés" />
+					<div class="contenant">
 						<p>
 							<strong>Le délice des sens</strong><br />
 							Folie-Méricourt
 						</p>
+						<button type="button" class="heart-button" onclick="return false;">
 						<i class="far fa-heart"></i>
+						<i class="fas fa-heart"></i>
+					</button>
+					</div>
 					</a>
 				</div>
 			</section>
