--- a/menu/a_la_francaise.html
+++ b/menu/a_la_francaise.html
@@ -3,12 +3,12 @@
 		<head>
 			<meta charset="utf-8">
 			<link rel="stylesheet" type="text/css" href="../css/style.css">
-			<link rel="stylesheet" type="text/css" href="../style.css/style_menu.css">
+			<link rel="stylesheet" type="text/css" href="../css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-			<title>Ohmyfood/Menu la note enchantée</title>
+			<title>Ohmyfood/Menu à la Française</title>
 		</head>
 		<body>
 			<header>
@@ -16,43 +16,35 @@
 					<i class="fas fa-arrow-left"></i><img src="../maquettes_ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
-				<img src="../maquettes_ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				<img src="../maquettes_ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
 				</div>
 			</header>
 			<section class="carte">
-				<h1><strong>La note enchantée</strong><i class="far fa-heart"></i></h1>
+				<h1><strong>À la Française</strong><i class="far fa-heart"></i></h1>
 				<article id="entrées">
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Ravioles de foie gras</strong><br />
-							<span class="accompagnement">Accompagnés de leur crème à la truffe</span>
+							<strong>Tartare de poulpe acidulé</strong><br />
+							<span class="accompagnement">Aux zests d'orange</span>
 						</p>
 						<span class="prix">25€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Caviar osciètre</strong><br />
-							<span class="accompagnement">Sur blini à la farine de blé noir</span>
+							<strong>Velouté de légumes d'antan</strong><br />
+							<span class="accompagnement">Carotte, panais, topinambour</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 						</div>
 					<div class="etiquette">
 						<p>
-							<strong>Homard et espuma de...</strong><br />
-							<span class="accompagnement">Mariné aux zests d'orange</span>
+							<strong>Soupe à l'oignon</strong><br />
+							<span class="accompagnement">Revisitée</span>
 						</p>
 						<span class="prix">20€</span>
-						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
-					</div>
-					<div class="etiquette">
-						<p>
-							<strong>Foie gras de canard cuit entier</strong><br />
-							<span class="accompagnement">Confiture de figue et pain toasté</span>
-						</p>
-						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
@@ -60,24 +52,24 @@
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Noix de Coquilles Saint-Jacques</strong><br />
-							<span class="accompagnement">Sur lit de purée céleri-rave</span>
+							<strong>Coquilles Saint-Jacques</strong><br />
+							<span class="accompagnement">Accompagnées d'une purée de panais</span>
 						</p>
 						<span class="prix">40€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Langoustine poêlée</strong><br />
-							<span class="accompagnement">Purée de patate douce</span>
+							<strong>Magret de canard</strong><br />
+							<span class="accompagnement">Et parmentier de pommes de terres</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Mijoté de queue de boeuf</strong><br />
-							<span class="accompagnement">Et riz sauvage aux zests de citron</span>
+							<strong>Pigeonneau d'Ille-et-Vilaine</strong><br />
+							<span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
 						</p>
 						<span class="prix">44€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -87,24 +79,24 @@
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Macaron noisette et chocolat</strong><br />
-							<span class="accompagnement">Glace au caramel brun et sel de Guérande</span>
+							<strong>Pétales de violettes glacés</strong><br />
+							<span class="accompagnement">Et purée de noisettes</span>
 						</p>
 						<span class="prix">18€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Baba au rhum revisité</strong><br />
-							<span class="accompagnement">Avec son coulis de citron</span>
+							<strong>Fondant au chocolat</strong><br />
+							<span class="accompagnement">Revisité</span>
 						</p>
 						<span class="prix">22€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Tarte au citron meringuée</strong><br />
-							<span class="accompagnement">Destructurée</span>
+							<strong>Millefeuille croustillant</strong><br />
+							<span class="accompagnement">Myrtilles et pâte d'amande</span>
 						</p>
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
