--- a/menu/la_note_enchantee.html
+++ b/menu/la_note_enchantee.html
@@ -3,12 +3,12 @@
 		<head>
 			<meta charset="utf-8">
 			<link rel="stylesheet" type="text/css" href="../css/style.css">
-			<link rel="stylesheet" type="text/css" href="../style.css/style_menu.css">
+			<link rel="stylesheet" type="text/css" href="../css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-			<title>Ohmyfood/Menu le délice des sens</title>
+			<title>Ohmyfood/Menu la note enchantée</title>
 		</head>
 		<body>
 			<header>
@@ -16,35 +16,43 @@
 					<i class="fas fa-arrow-left"></i><img src="../maquettes_ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
-				<img src="../maquettes_ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				<img src="../maquettes_ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
 				</div>
 			</header>
 			<section class="carte">
-				<h1><strong>À la Française</strong><i class="far fa-heart"></i></h1>
+				<h1><strong>La note enchantée</strong><i class="far fa-heart"></i></h1>
 				<article id="entrées">
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Tartare de thon</strong><br />
-							<span class="accompagnement">Assaisonné au yuzu</span>
+							<strong>Ravioles de foie gras</strong><br />
+							<span class="accompagnement">Accompagnés de leur crème à la truffe</span>
 						</p>
 						<span class="prix">25€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Bouchée de homard croustillant</strong><br />
-							<span class="accompagnement">Et sa farandole de petits légumes</span>
+							<strong>Caviar osciètre</strong><br />
+							<span class="accompagnement">Sur blini à la farine de blé noir</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 						</div>
 					<div class="etiquette">
 						<p>
-							<strong>Velouté de cèpes</strong><br />
-							<span class="accompagnement">Aux truffes</span>
+							<strong>Homard et espuma de...</strong><br />
+							<span class="accompagnement">Mariné aux zests d'orange</span>
 						</p>
 						<span class="prix">20€</span>
+						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
+					</div>
+					<div class="etiquette">
+						<p>
+							<strong>Foie gras de canard cuit entier</strong><br />
+							<span class="accompagnement">Confiture de figue et pain toasté</span>
+						</p>
+						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</article>
@@ -52,24 +60,24 @@
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Poulet rôti aux herbes de provence</strong><br />
-							<span class="accompagnement">Et sa crème de truffe</span>
+							<strong>Noix de Coquilles Saint-Jacques</strong><br />
+							<span class="accompagnement">Sur lit de purée céleri-rave</span>
 						</p>
 						<span class="prix">40€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Langouste rôtie</strong><br />
-							<span class="accompagnement">Et ses légumes de saison</span>
+							<strong>Langoustine poêlée</strong><br />
+							<span class="accompagnement">Purée de patate douce</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Côte de boeuf angus</strong><br />
-							<span class="accompagnement">Et sa purée de panais</span>
+							<strong>Mijoté de queue de boeuf</strong><br />
+							<span class="accompagnement">Et riz sauvage aux zests de citron</span>
 						</p>
 						<span class="prix">44€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -79,24 +87,24 @@
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Farandole de desserts</strong><br />
-							<span class="accompagnement">Du chef</span>
+							<strong>Macaron noisette et chocolat</strong><br />
+							<span class="accompagnement">Glace au caramel brun et sel de Guérande</span>
 						</p>
 						<span class="prix">18€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Crème brulée</strong><br />
-							<span class="accompagnement">Revisitée</span>
+							<strong>Baba au rhum revisité</strong><br />
+							<span class="accompagnement">Avec son coulis de citron</span>
 						</p>
 						<span class="prix">22€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Tiramisu</strong><br />
-							<span class="accompagnement">A la noisette</span>
+							<strong>Tarte au citron meringuée</strong><br />
+							<span class="accompagnement">Destructurée</span>
 						</p>
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
