--- a/menu/le_delice_des_sens.html
+++ b/menu/le_delice_des_sens.html
@@ -3,12 +3,12 @@
 		<head>
 			<meta charset="utf-8">
 			<link rel="stylesheet" type="text/css" href="../css/style.css">
-			<link rel="stylesheet" type="text/css" href="../style.css/style_menu.css">
+			<link rel="stylesheet" type="text/css" href="../css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-			<title>Ohmyfood/Menu la palette du goût</title>
+			<title>Ohmyfood/Menu le délice des sens</title>
 		</head>
 		<body>
 			<header>
@@ -16,33 +16,33 @@
 					<i class="fas fa-arrow-left"></i><img src="../maquettes_ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo" />
 				</a>
 				<div class="background">
-				<img src="../maquettes_ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
+				<img src="../maquettes_ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat du jour" /><!--parti dédier image carte en fond-->
 				</div>
 			</header>
 			<section class="carte">
-				<h1><strong>La palette du goût</strong><i class="far fa-heart"></i></h1>
+				<h1><strong>À la Française</strong><i class="far fa-heart"></i></h1>
 				<article id="entrées">
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Fricassée d'escargot</strong><br />
-							<span class="accompagnement">Au pimét d'espelette</span>
+							<strong>Tartare de thon</strong><br />
+							<span class="accompagnement">Assaisonné au yuzu</span>
 						</p>
 						<span class="prix">25€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Foie gras de canard ni-cuit</strong><br />
-							<span class="accompagnement">Et ses copeaux de truffe noire</span>
+							<strong>Bouchée de homard croustillant</strong><br />
+							<span class="accompagnement">Et sa farandole de petits légumes</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 						</div>
 					<div class="etiquette">
 						<p>
-							<strong>Oeuf au plat</strong><br />
-							<span class="accompagnement">Assaisonné à la truffe sur lit de....</span>
+							<strong>Velouté de cèpes</strong><br />
+							<span class="accompagnement">Aux truffes</span>
 						</p>
 						<span class="prix">20€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -52,24 +52,24 @@
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Filet de boeuf aux herbes</strong><br />
-							<span class="accompagnement">Accompagnées de sa ribambelle de légu...</span>
+							<strong>Poulet rôti aux herbes de provence</strong><br />
+							<span class="accompagnement">Et sa crème de truffe</span>
 						</p>
 						<span class="prix">40€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Parmentier de queue de boeuf</strong><br />
-							<span class="accompagnement">A la truffe noire sur sa purée de panais</span>
+							<strong>Langouste rôtie</strong><br />
+							<span class="accompagnement">Et ses légumes de saison</span>
 						</p>
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>filet de Turbot</strong><br />
-							<span class="accompagnement">Aux agrumes</span>
+							<strong>Côte de boeuf angus</strong><br />
+							<span class="accompagnement">Et sa purée de panais</span>
 						</p>
 						<span class="prix">44€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -79,24 +79,24 @@
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="etiquette">
 						<p>
-							<strong>Paris-Brest</strong><br />
-							<span class="accompagnement">Revisité</span>
+							<strong>Farandole de desserts</strong><br />
+							<span class="accompagnement">Du chef</span>
 						</p>
 						<span class="prix">18€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Macaron au chocolat d'exception</strong><br />
-							<span class="accompagnement">Et glace à la vanille de Madagascar</span>
+							<strong>Crème brulée</strong><br />
+							<span class="accompagnement">Revisitée</span>
 						</p>
 						<span class="prix">22€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 					<div class="etiquette">
 						<p>
-							<strong>Mousse au chocolat</strong><br />
-							<span class="accompagnement">Au piment d'espelette et à la truffe noire</span>
+							<strong>Tiramisu</strong><br />
+							<span class="accompagnement">A la noisette</span>
 						</p>
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -108,7 +108,7 @@
 			</section>
 			<footer>
 				<div class="logo_de_fin">
-				<img src="../Mmaquettes_ohmyfood/images/logo/ohmyfood.png" alt=" logo du site"/>
+				<img src="../maquettes_ohmyfood/images/logo/ohmyfood.png" alt=" logo du site"/>
 				</div>
 				<div class="info">
 					<ul>
