travail animation keyframe,etc

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 			<title>Ohmyfood</title>
 		</head>
 		<body>
+			<div class="page-chargement">
+				<div class="circle-loader">
+					<div class="circle"></div>
+				</div>
+				<div class="text-chargement">Chargement...</div>
+			</div>
 			<header>
 				<div class="logo"><img src="maquettes_ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo"/></div>
 				<div class="town_position">
