--- a/menu/la_note_enchantee.html
+++ b/menu/la_note_enchantee.html
@@ -23,6 +23,8 @@
 				<h1><strong>La note enchantée</strong><i class="far fa-heart"></i></h1>
 				<article id="entrées">
 					<h2><span class="overline">ENTR</span>EES</h2>
+					<div class="progress-barre">
+					<div class="loader-page"></div>
 					<div class="etiquette">
 						<p>
 							<strong>Ravioles de foie gras</strong><br />
@@ -55,9 +57,12 @@
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+				</div>
 				</article>
 				<article id="plats">
 					<h2><span class="overline">PLAT</span>S</h2>
+					<div class="progress-barre">
+					<div class="loader-page"></div>
 					<div class="etiquette">
 						<p>
 							<strong>Noix de Coquilles Saint-Jacques</strong><br />
@@ -82,9 +87,12 @@
 						<span class="prix">44€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+				</div>
 				</article>
 				<article id="desserts">
 					<h2><span class="overline">DESS</span>ERTS</h2>
+					<div class="progress-barre">
+					<div class="loader-page"></div>
 					<div class="etiquette">
 						<p>
 							<strong>Macaron noisette et chocolat</strong><br />
@@ -109,6 +117,7 @@
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+				</div>
 				</article>
 				<button type="button" class="button">
 					<span class="button__wtext">Commander</span>
