--- a/menu/le_delice_des_sens.html
+++ b/menu/le_delice_des_sens.html
@@ -23,6 +23,8 @@
 				<h1><strong>À la Française</strong><i class="far fa-heart"></i></h1>
 				<article id="entrées">
 					<h2><span class="overline">ENTR</span>EES</h2>
+					<div class="progress-barre">
+					<div class="loader-page"></div>
 					<div class="etiquette">
 						<p>
 							<strong>Tartare de thon</strong><br />
@@ -47,9 +49,12 @@
 						<span class="prix">20€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+				</div>
 				</article>
 				<article id="plats">
 					<h2><span class="overline">PLAT</span>S</h2>
+					<div class="progress-barre">
+					<div class="loader-page"></div>
 					<div class="etiquette">
 						<p>
 							<strong>Poulet rôti aux herbes de provence</strong><br />
@@ -74,9 +79,12 @@
 						<span class="prix">44€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+				</div>
 				</article>
 				<article id="desserts">
 					<h2><span class="overline">DESS</span>ERTS</h2>
+					<div class="progress-barre">
+					<div class="loader-page"></div>
 					<div class="etiquette">
 						<p>
 							<strong>Farandole de desserts</strong><br />
@@ -101,6 +109,7 @@
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+				</div>
 				</article>
 				<button type="button" class="button">
 					<span class="button__wtext">Commander</span>
