travail animation keyframe,augmentation delais loader

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 							<strong>La palette du goût</strong><br />
 							Ménilmontant
 						</p>
-						<button type="button" class="heart-button" onclick="return false;">
+						<div class="heart-button" onclick="return false;">
 							<i class="far fa-heart"></i>
 							<i class="fas fa-heart"></i>
-						</button>
+						</div>
 					</div>
 					</a>
 				</div>
@@ -69,10 +69,10 @@
 							<strong>La note enchantée</strong><br />
 							Charonne
 						</p>
-						<button type="button" class="heart-button" onclick="return false;">
+						<div class="heart-button" onclick="return false;">
 						<i class="far fa-heart"></i>
 						<i class="fas fa-heart"></i>
-					</button>
+					</div>
 					</div>
 					</a>
 				</div>
@@ -84,10 +84,10 @@
 							<strong>À la française</strong><br />
 							Cité Rouge
 						</p>
-						<button type="button" class="heart-button" onclick="return false;">
+						<div class="heart-button" onclick="return false;">
 						<i class="far fa-heart"></i>
 						<i class="fas fa-heart"></i>
-					</button>
+					</div>
 					</div>
 					</a>
 				</div>
@@ -99,10 +99,10 @@
 							<strong>Le délice des sens</strong><br />
 							Folie-Méricourt
 						</p>
-						<button type="button" class="heart-button" onclick="return false;">
+						<div class="heart-button" onclick="return false;">
 						<i class="far fa-heart"></i>
 						<i class="fas fa-heart"></i>
-					</button>
+					</div>
 					</div>
 					</a>
 				</div>
