travail animation keyframe,augmentation delais loader, rendu desktop

--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
 				</div>
 			</header>
 			<nav>
-				<h2><strong>Fonctionnement</strong></h2>
+				<h2 id="fonctionnement"><strong>Fonctionnement</strong></h2>
 				<ul>
 					<li><span>1</span><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
 					<li><span>2</span><i class="fas fa-list-ul"></i>Composez votre menu</li>
 					<li class="shop"><span>3</span><i class="fas fa-store"></i>Dégustez au restaurant</li>
 				</ul>
 			</nav>
-			<section class="restaurants">
+			<section>
 				<h2><strong>Restaurants</strong></h2>
+				<div class="restaurants">
 				<div class="cards">
 					<a href="menu/la_palette_du_gout.html">
 						<img src="maquettes_ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat proposés" />
@@ -105,6 +106,8 @@
 					</div>
 					</div>
 					</a>
+				</div>
+				</div>
 				</div>
 			</section>
 			<footer>
