--- a/menu/la_note_enchantee.html
+++ b/menu/la_note_enchantee.html
@@ -25,6 +25,7 @@
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="progress-barre">
 					<div class="loader-page"></div>
+					<div class="all">
 					<div class="etiquette">
 						<p>
 							<strong>Ravioles de foie gras</strong><br />
@@ -57,12 +58,14 @@
 						<span class="prix">35€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+					</div>
 				</div>
 				</article>
 				<article id="plats">
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="progress-barre">
 					<div class="loader-page"></div>
+					<div class="all">
 					<div class="etiquette">
 						<p>
 							<strong>Noix de Coquilles Saint-Jacques</strong><br />
@@ -88,11 +91,13 @@
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</div>
+				</div>
 				</article>
 				<article id="desserts">
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="progress-barre">
 					<div class="loader-page"></div>
+					<div class="all">
 					<div class="etiquette">
 						<p>
 							<strong>Macaron noisette et chocolat</strong><br />
@@ -117,6 +122,7 @@
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+				</div>
 				</div>
 				</article>
 				<button type="button" class="button">
