--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -25,6 +25,7 @@
 					<h2><span class="overline">ENTR</span>EES</h2>
 					<div class="progress-barre">
 					<div class="loader-page"></div>
+						<div class="all">
 					<div class="etiquette">
 						<p>
 							<strong>Fricassée d'escargot</strong><br />
@@ -50,11 +51,13 @@
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</div>
+				</div>
 				</article>
 				<article id="plats">
 					<h2><span class="overline">PLAT</span>S</h2>
 					<div class="progress-barre">
 					<div class="loader-page"></div>
+					<div class="all">
 					<div class="etiquette">
 						<p>
 							<strong>Filet de boeuf aux herbes</strong><br />
@@ -80,11 +83,13 @@
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
 				</div>
+				</div>
 				</article>
 				<article id="desserts">
 					<h2><span class="overline">DESS</span>ERTS</h2>
 					<div class="progress-barre">
 					<div class="loader-page"></div>
+					<div class="all">
 					<div class="etiquette">
 						<p>
 							<strong>Paris-Brest</strong><br />
@@ -109,6 +114,7 @@
 						<span class="prix">23€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
 					</div>
+				</div>
 				</div>
 				</article>
 				<button type="button" class="button">
