travail ajustement,animation keyframe,augmentation delais loader, rendu desktop, rajout viewport

--- a/menu/la_note_enchantee.html
+++ b/menu/la_note_enchantee.html
@@ -2,6 +2,7 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" type="text/css" href="../css/style.css">
 			<link rel="stylesheet" type="text/css" href="../css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -44,7 +45,7 @@
 						</div>
 					<div class="etiquette">
 						<p>
-							<strong>Homard et espuma de...</strong><br />
+							<strong>Homard et espuma de potiron</strong><br />
 							<span class="accompagnement">Mariné aux zests d'orange</span>
 						</p>
 						<span class="prix">20€</span>
