--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
-			<meta name="viewport" content="width=980" />
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
 				</ul>
 			</nav>
 			<section>
-				<h2><strong>Restaurants</strong></h2>
+				<h2 id="titre-restaurant"><strong>Restaurants</strong></h2>
 				<div class="restaurants">
 				<div class="cards">
 					<a href="menu/la_palette_du_gout.html">
