--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -2,6 +2,7 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" type="text/css" href="../css/style.css">
 			<link rel="stylesheet" type="text/css" href="../css/style_menu.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -45,7 +46,7 @@
 					<div class="etiquette">
 						<p>
 							<strong>Oeuf au plat</strong><br />
-							<span class="accompagnement">Assaisonné à la truffe sur lit de....</span>
+							<span class="accompagnement">Assaisonné à la truffe sur lit de caviar</span>
 						</p>
 						<span class="prix">20€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
@@ -61,7 +62,7 @@
 					<div class="etiquette">
 						<p>
 							<strong>Filet de boeuf aux herbes</strong><br />
-							<span class="accompagnement">Accompagnées de sa ribambelle de légu...</span>
+							<span class="accompagnement">Accompagnées de sa ribambelle de légumes</span>
 						</p>
 						<span class="prix">40€</span>
 						<span class="check"><i class="fas fa-check-circle fa.color"></i></span>
